# gdynya-rs

./: .dockerignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker.yaml  test.yaml
credential-provider/: Cargo.toml
credential-provider/src/: main.rs
gdynya/: Cargo.toml  Dockerfile  rules.example.yaml
gdynya-gh-credential/: Cargo.toml
gdynya-ui/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
gdynya-ui/src/app/: page.tsx
gdynya/src/: api_schema.rs  axum_aux.rs  error.rs  main.rs
gdynya/src/auth/: github.rs  mod.rs
gdynya/src/store/: aws.rs  mod.rs  s3.rs
server/: Cargo.toml  Dockerfile
server/src/: index_schema.rs  lib.rs  main.rs  types.rs
server/src/auth/: github.rs  mod.rs
server/src/store/: mod.rs  s3.rs
ui/: .gitignore  Dockerfile  package.json
