[package]
name = "gdynya"
version = "0.1.0"
edition = "2021"
description = "An implementation of cargo private registry for enterprise rust users"
license = "GPL"
documentation = "https://prates.namachan10777.dev"
repository = "https://github.com/namachan10777/prates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["s3"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.73"
aws-config = { version="0.56", optional = true }
aws-sdk-dynamodb = "1.9.0"
aws-sdk-s3 = { version = "0.30", optional = true }
axum = { version = "0.6", features = ["headers", "tracing", "http2"] }
byteorder = "1.4.3"
clap = { version = "4", features = ["derive", "env"] }
digest = "0.10.7"
futures-util = "0.3.28"
hex = "0.4.3"
moka = { version = "0.11", features = ["future"] }
nom = "7.1.3"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
rmp-serde = "1.1.2"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "tracing", "sync", "fs", "signal"] }
toml = "0.7"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "valuable", "json"] }
url = "2"
valuable = { version = "0.1", features = ["derive"] }
