[package]
name = "gdynya"
version = "0.1.0"
edition = "2024"
description = "An implementation of cargo private registry for enterprise rust users"
license = "GPL"
documentation = "https://prates.namachan10777.dev"
repository = "https://github.com/namachan10777/prates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["s3"]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
aws-config = { version = "1.6", optional = true }
aws-sdk-dynamodb = "1.71"
aws-sdk-s3 = { version = "1.71", optional = true }
axum = { version = "0.8", features = ["tracing", "http2"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
byteorder = "1.5"
clap = { version = "4", features = ["derive", "env"] }
digest = "0.10"
futures-util = "0.3"
headers = "0.4.0"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
nom = "8"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
rmp-serde = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "tracing",
    "sync",
    "fs",
    "signal",
] }
toml = "0.8"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "valuable",
    "json",
] }
url = "2"
valuable = { version = "0.1", features = ["derive"] }
